<resources>
    <string name="app_name">EPasaj</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="products">Products</string>
    <string name="categories">Categories</string>
    <string name="likes">Likes</string>
    <string name="orders">Orders</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="scroll">scroll</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="quantity">quantity</string>
    <string name="discounted_total">Discounted Total</string>
    <string name="total">Total</string>
    <string name="discount">Discount</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="image">Image</string>
    <string name="category">Category</string>
    <string name="guest">Guest</string>
    <string name="see_product_details">See Product Details</string>
    <string name="see_product_reviews">See Product Reviews</string>
    <string name="description">Description</string>
    <string name="discount_percentage">Discount Percentage</string>
    <string name="rating">Rating</string>
    <string name="stock">Stock</string>
    <string name="tags">Tags</string>
    <string name="brand">Brand</string>
    <string name="sku">SKU</string>
    <string name="weight">Weight</string>
    <string name="dimensions">Dimensions</string>
    <string name="warranty_information">Warranty Information</string>
    <string name="shipping_information">Shipping Information</string>
    <string name="availability_status">Availability Status</string>
    <string name="reviews">Reviews</string>
    <string name="return_policy">Return Policy</string>
    <string name="minimum_order_quantity">Minimum Order Quantity</string>
    <string name="meta">Meta</string>
    <string name="user_name">User Name</string>
    <string name="bio">BIO</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="mail">Mail</string>
    <string name="phone">Phone</string>
    <string name="birthdate">BirthDate</string>
    <string name="bloodgroup">BloodGroup</string>
    <string name="height">Height</string>
    <string name="eyecolor">Eyecolor</string>
    <string name="address">ADDRESS</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="university">University</string>
    <string name="company">COMPANY</string>
    <string name="department">Department</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="bank">BANK</string>
    <string name="card_expire">Card Expire</string>
    <string name="card_number">Card Number</string>
    <string name="card_type">Card Type</string>
    <string name="currency">Currency</string>
    <string name="iban">Iban</string>
    <string name="info">info</string>
    <string name="slogan_one">Explore trending styles and discover new favorites.</string>
    <string name="add_to_cart">Add To Cart</string>

</resources>