<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_cart_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_view_product_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image"/>

            <TextView
                android:id="@+id/txt_view_product_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/title"
                android:textColor="@color/md_theme_primary"
                android:textSize="@dimen/text_size_h4_18"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_view_product_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_view_product_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/price"
                android:textColor="@color/md_theme_primary"
                android:textSize="@dimen/text_size_h4_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txt_view_product_title"
                app:layout_constraintTop_toBottomOf="@id/txt_view_product_title" />

            <TextView
                android:id="@+id/txt_view_product_discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/discount"
                android:textColor="@color/md_theme_primary"
                android:textSize="@dimen/text_size_h4_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txt_view_product_price"
                app:layout_constraintTop_toBottomOf="@id/txt_view_product_price" />

            <TextView
                android:id="@+id/txt_view_product_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:singleLine="true"
                android:text="@string/total"
                android:textColor="@color/md_theme_primary"
                android:textSize="@dimen/text_size_h4_18"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txt_view_product_discount"
                app:layout_constraintTop_toBottomOf="@id/txt_view_product_discount" />

            <TextView
                android:id="@+id/txt_view_discounted_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/discounted_total"
                android:textColor="@color/md_theme_primary"
                android:textSize="@dimen/text_size_h4_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txt_view_product_total"
                app:layout_constraintTop_toBottomOf="@id/txt_view_product_total" />

            <TextView
                android:id="@+id/txt_view_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/round_background"
                android:paddingHorizontal="5dp"
                android:text="@string/quantity"
                android:textColor="@color/md_theme_background"
                android:textSize="@dimen/text_size_h2_22"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
