<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.DetailFragment">

    <Button
        android:id="@+id/btn_add_to_cart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/add_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/scroll"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_to_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:contentDescription="@string/image"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <!-- İkonları içeren LinearLayout -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <!-- İlk ikon -->
                    <ImageView
                        android:id="@+id/img_view_back_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:alpha="0.5"
                        android:background="@drawable/round_background"
                        android:contentDescription="@string/image"
                        android:padding="16dp"
                        android:src="@drawable/ic_back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/md_theme_background" />

                    <!-- Sağ taraftaki ikon -->
                    <ImageView
                        android:id="@+id/img_view_likes_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:alpha="0.5"
                        android:background="@drawable/round_background"
                        android:contentDescription="@string/image"
                        android:padding="16dp"
                        android:src="@drawable/ic_outline_like"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/md_theme_background" />

                    <!-- İkinci ikon -->
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_view_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/md_theme_onSurface"
                    android:textSize="@dimen/text_size_h2_22"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_view_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/md_theme_primary"
                    android:textSize="@dimen/text_size_h2_22"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_view_show_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/see_product_details"
                        android:textColor="@color/md_theme_primary"
                        android:textSize="@dimen/text_size_h1_24"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/image"
                        app:srcCompat="@drawable/ic_arrow_drop"
                        app:tint="@color/md_theme_primary" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_view_show_reviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/see_product_reviews"
                        android:textColor="@color/md_theme_primary"
                        android:textSize="@dimen/text_size_h1_24"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:id="@+id/imgViewBioEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/image"
                        app:srcCompat="@drawable/ic_arrow_drop"
                        app:tint="@color/md_theme_primary" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
